@@ -1,3 +1,7 @@
+2003-01-30  Andras Varga
+
+	* added handling of new MathFunc4Args where needed
+
 2003-01-23  Andras Varga
 
 	* NOTE about Fibers, the Win32 API used to implement activity()
